--- a/asset/Style/style.css
+++ b/asset/Style/style.css
@@ -8,25 +8,51 @@ body {
     color: #333;
 }
 
-/* Conteneur principal */
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 2rem;
+/* Centre la navbar horizontalement */
+header {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
 }
 
-/* Titre principal */
-h1 {
-    font-size: 2rem;
-    font-weight: 700; /* gras */
-    margin-bottom: 1rem;
+/* La barre principale */
+.input {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 12px;
+    background-color: #0d1117;
+    border: 1px solid #2f81f7;
+    border-radius: 300px;
+    padding: 10px 20px;
 }
 
-/* Paragraphe */
-p {
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
+/* Les boutons dans la barre */
+.value {
+    background-color: transparent;
+    border: none;
+    color: white;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: all 0.2s ease;
+}
+
+.value:hover,
+.value:focus {
+    background-color: #21262c;
+}
+
+.value:active {
+    background-color: #1a1f24;
+    outline: none;
+}
+
+.value svg {
+    width: 15px;
 }
 
 /* CTA */
