--- a/asset/Style/style.css
+++ b/asset/Style/style.css
@@ -184,10 +184,14 @@ header {
     transition: background 0.3s ease;
 }
 .img-container {
-    position: relative;
+    position: absolute;
+    top: 75%;
+    right: 80%; /* Place à droite hors de la page */
+    transform: translate(-50%, -50%);
     width: 600px;
     height: 600px;
-    margin: 100px auto;
+    overflow: visible;
+    pointer-events: none; /* Évite de bloquer les clics */
 }
 
 .item {
@@ -195,7 +199,7 @@ header {
     --angle: calc(360deg / var(--total) * var(--i));
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 0%;
     transform: rotate(var(--angle)) translate(800px)
         rotate(calc(-1 * var(--angle)));
 }
