--- a/asset/Style/style.css
+++ b/asset/Style/style.css
@@ -64,7 +64,7 @@ header {
     text-align: center;
 }
 .value:hover {
-    background-color: #000000;
+    background-color: #ffffff;
     color: #0d1117;
 }
 
